--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+
+.accio{
+	height:150px;
+	background-color:#000000;
+	
+}
+.hello-accio{
+	color:white;
+	margin-left:32px;
+	padding:10px;
+	
+}
