--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
 
 /* Your CSS Code here. */
-
 .accio{
 	height:150px;
 	background-color:#000000;
 	
 }
 .hello-accio{
-	color:white;
+	color:#ffffff;
 	margin-left:32px;
 	padding:10px;
-	
 }
+
